--- a/frontend/neuralife-ai-market/package.json
+++ b/frontend/neuralife-ai-market/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@tailwindcss/typography": "^0.5.19",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
+    "rehype-highlight": "^7.0.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
