--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -9,6 +9,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    # Route for the SDE1 Prep API
+    location /api/sde1prep/ {
+        proxy_pass http://sde1prep_api:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     # Uncomment and add routes for your other services here
     # location /api/auth/ {
     #     proxy_pass http://new_auth_api:8000/;
