--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,14 @@ services:
     expose:
       - "8000"
 
-  # Add your other services here as you create them
-  # new_auth_api:
-  #   build: ./new_auth_service
-  #   restart: always
-  #   expose:
-  #     - "8000"
+  sde1prep_api:
+    build: ./sde1prep
+    restart: always
+    expose:
+      - "8000"
+    # Uncomment if you need environment variables from the .env file
+    env_file:
+      - ./sde1prep/.env
 
   nginx:
     image: nginx:latest
@@ -23,4 +25,4 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - coderefactoring_api
-      # - new_auth_api
+      - sde1prep_api
