--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -1,13 +1,13 @@
 server {
     listen 80;
 
-    # Route for the Code Refactoring API
-    location /api/refactor/ {
-        proxy_pass http://coderefactoring_api:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    # # Route for the Code Refactoring API
+    # location /api/refactor/ {
+    #     proxy_pass http://coderefactoring_api:8000/;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # }
 
     # Route for the SDE1 Prep API
     location /api/sde1prep/ {
