--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.8"
 
 services:
-  coderefactoring_api:
-    build: ./coderefactoring_b
-    restart: always
-    expose:
-      - "8000"
+  # coderefactoring_api:
+  #   build: ./coderefactoring_b
+  #   restart: always
+  #   expose:
+  #     - "8000"
 
   sde1prep_api:
     build: ./sde1prep
@@ -24,5 +24,5 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - coderefactoring_api
+      # - coderefactoring_api
       - sde1prep_api
