--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./backend/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       # - coderefactoring_api
       - sde1prep_api
