--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,13 +8,13 @@ services:
   #     - "8000"
 
   sde1prep_api:
-    build: ./backend/sde1prep
+    build: ./sde1prep
     restart: always
     expose:
       - "8000"
     # Uncomment if you need environment variables from the .env file
     env_file:
-      - ./backend/sde1prep/.env
+      - ./sde1prep/.env
 
   nginx:
     image: nginx:latest
@@ -22,7 +22,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./backend/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       # - coderefactoring_api
       - sde1prep_api
