--- a/.github/workflows/backend-deployment.yml
+++ b/.github/workflows/backend-deployment.yml
@@ -30,7 +30,7 @@ jobs:
                       docker ps -q --filter "publish=80" | xargs -r docker rm -f
 
                       # 2. Standard Cleanup
-                      docker compose down
+                      docker compose down --remove-orphans
 
                       # 3. Build and Start
                       docker compose up --build -d
