--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -8,7 +8,7 @@ on:
     paths:
       - "frontend/**"
       - "index.html"
-      - ".github/workflows/**"
+      # - ".github/workflows/**"
 
 permissions:
   contents: read
