--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,18 +12,18 @@ services:
     build: ./sde1prep
     restart: always
     expose:
-      - "8000"
+      - "8000:8000"
     # Uncomment if you need environment variables from the .env file
     env_file:
       - ./sde1prep/.env
 
-  nginx:
-    image: nginx:latest
-    restart: always
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      # - coderefactoring_api
-      - sde1prep_api
+  # nginx:
+  #   image: nginx:latest
+  #   restart: always
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+  #   depends_on:
+  #     # - coderefactoring_api
+  #     - sde1prep_api
