--- a/backend/sde1prep/.env
+++ b/backend/sde1prep/.env
@@ -1,3 +1,4 @@
 MONGODB_URL=mongodb+srv://amazonsde1prep:Pavan809649@cluster0.cep1uuq.mongodb.net/?appName=Cluster0
 DATABASE_NAME=amazonsde1prep
 SECRET_KEY=O7b58UJThDPjJuLZvYNFyQ7kPGSP-hvIv77EpIiZyQ8
+GOOGLE_API_KEY=AIzaSyDgFg6URwGRLLNpGCETAFKbEJ6dAWN7DiI
