--- a/.github/workflows/backend-deployment.yml
+++ b/.github/workflows/backend-deployment.yml
@@ -11,7 +11,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Install AWS CLI
-              run: sudo apt-get update && sudo apt-get install -y awscli
+              run: |
+                  curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+                  unzip awscliv2.zip
+                  sudo ./aws/install
+                  aws --version
 
             - name: Deploy to EC2
               uses: appleboy/ssh-action@v1.0.3
