--- a/.github/workflows/backend-deployment.yml
+++ b/.github/workflows/backend-deployment.yml
@@ -10,12 +10,8 @@ jobs:
     deploy:
         runs-on: ubuntu-latest
         steps:
-            - name: Install AWS CLI
-              run: |
-                  curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-                  unzip awscliv2.zip
-                  sudo ./aws/install
-                  aws --version
+            - name: Check AWS CLI version
+              run: aws --version
 
             - name: Deploy to EC2
               uses: appleboy/ssh-action@v1.0.3
