--- a/.github/workflows/backend-deployment.yml
+++ b/.github/workflows/backend-deployment.yml
@@ -22,6 +22,13 @@ jobs:
                   script: |
                       cd ~/personalprojects
 
+                      # Install AWS CLI on EC2 if missing
+                      if ! command -v aws &> /dev/null; then
+                        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+                        unzip awscliv2.zip
+                        sudo ./aws/install
+                      fi
+
                       # FORCE UPDATE: Fetch and hard reset to ensure server matches GitHub exactly
                       git fetch origin main
                       git reset --hard origin/main
