--- a/.github/workflows/backend-deployment.yml
+++ b/.github/workflows/backend-deployment.yml
@@ -24,6 +24,8 @@ jobs:
 
                       # Install AWS CLI on EC2 if missing
                       if ! command -v aws &> /dev/null; then
+                        sudo apt-get update
+                        sudo apt-get install -y unzip
                         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
                         unzip awscliv2.zip
                         sudo ./aws/install
