--- a/backend/sde1prep/.env.example
+++ b/backend/sde1prep/.env.example
@@ -1,4 +1,4 @@
 MONGODB_URL=your mongodb url here
 DATABASE_NAME=your database name here
 SECRET_KEY=your secret key here
-GOOGLE_API_KEY=your google api key her
+GOOGLE_API_KEY=your google api key here
