--- a/frontend/neuralife-ai-market/package.json
+++ b/frontend/neuralife-ai-market/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
     "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
